# electrum

./: %1546  .cirrus.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodule  .gitmodules  .releaserc.json  .travis.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  Dockerfile  FTX TRADING  Info.plist  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README  README-Linux-x86_64.md  README-OSX.md  README-Windows.md  README.md  README.rst  RELEASE-NOTES  RELEASE-NOTES.md  SECURITY.md  TODO  TODOLIST  ale super!  app.fil  blocks  brewfile  build-docker.sh  buildozer.spec  clean.sh  comma_separated.py  (+91 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.kdev4/: electrum.kdev4
.marscode/: deviceInfo.json
Ocean_Wallet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aes/: __init__.py
android/: .gitignore  Dockerfile  README.md  build-requirements.txt  build.gradle  build.sh  gradle.properties
client/: ANDROID  MANIFEST.in  README  blocks  (+18 more)
contrib/neoscrypt_module/: .in~  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  configure.lineno  libneoscrypt-config.h.in  libneoscrypt.la  libneoscrypt.so.0  libneoscrypt_la-neoscrypt.lo  libtool  neoscrypt-config.h  neoscrypt.c  neoscrypt.h  neoscrypt.pc  neoscrypt.pc.in  setup.py  setup.py.org  stamp-h1
contrib/neoscrypt_module/.deps/: libneoscrypt_la-neoscrypt.Plo  neoscrypt.Plo
contrib/neoscrypt_module/.libs/: libneoscrypt.la  libneoscrypt.lai  libneoscrypt.so.0.0.0
contrib/neoscrypt_module/autom4te.cache/: output.1  requests  traces.0  traces.1
(+3847 files in other folders)
